# NBC-TI

./: .editorconfig  .gitignore  CMakeLists.txt  MED_Project.sln  README.md  conanfile.py
MED_Project/: MED_Project.cpp  MED_Project.vcxproj  MED_Project.vcxproj.filters  NBC.cpp  NBC.h  Point.cpp  Point.h
MED_Project/data/: D31.txt  my_dataset.txt
data/: banana.txt  my2.txt  my3.txt  my_dataset.txt  sequoia_2000.txt  zelnik3.txt  zelnik4.txt
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  NBC.cpp  NBC.h  Point.cpp  Point.h  StartWindow.cpp  StartWindow.h  main.cpp
src/forms/: StartWindow.ui
test/: CMakeLists.txt  test.cpp
